crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_part_rand_1_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: part_rand_1"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                     |
+---------------+--------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: part.p_partkey = Int64(12345)                                                                                    |
|               |   TableScan: part projection=[p_partkey, p_name, p_mfgr, p_brand, p_type, p_size, p_container, p_retailprice, p_comment] |
| physical_plan | CoalesceBatchesExec: target_batch_size=8192                                                                              |
|               |   FilterExec: p_partkey@0 = 12345                                                                                        |
|               |     SchemaCastScanExec                                                                                                   |
|               |       BytesProcessedExec                                                                                                 |
|               |         DataSourceExec: partitions=16, partition_sizes=[2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1]                  |
|               |                                                                                                                          |
+---------------+--------------------------------------------------------------------------------------------------------------------------+
